apps/vote-system/exon/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: stem.exonleiden.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-system
                port:
                  name: http
